# shmoggl

./: .gitignore  README.md  com.github.alexeyoganezov.shmoggl.json  meson.build
data/: com.github.alexeyoganezov.shmoggl.appdata.xml.in  com.github.alexeyoganezov.shmoggl.desktop.in  com.github.alexeyoganezov.shmoggl.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  shmoggl-database.c  shmoggl-database.h  shmoggl-task-view.c  shmoggl-task-view.h  shmoggl-task-view.ui  shmoggl-task.c  shmoggl-task.h  shmoggl-task.ui  shmoggl-time-slice-view.c  shmoggl-time-slice-view.h  shmoggl-time-slice-view.ui  shmoggl-time-slice.c  shmoggl-time-slice.h  shmoggl-utils.c  shmoggl-utils.h  shmoggl-window.c  shmoggl-window.h  shmoggl-window.ui  shmoggl.gresource.xml
src/dependencies/: meson.build
src/dependencies/sqlite/: meson.build
